Refactor controllers/models, bump versions to 0.0.3
Bump parent version to 0.0.3 across multiple modules. Move imdbId, rating and votes into Pelicula and add getRatingFormatted; remove duplicate fields from PeliculasOtros. Refactor PeliculasController and SeriesController to use constants for model attribute keys, improve null-safety (check Optional before get), set imdbId on update, throw IllegalArgumentException correctly, remove PermisoException from several method signatures, and adjust response content types. Harden services by checking Optional presence before using values, handle page parameter defaulting, and simplify findByTitlesInYear signatures (title, year). Improve export XML string formatting/quoting for ODS generation. Update validation controllers to use stream.toList for violation messages. Make FiltrosDto Serializable, use StringUtils.hasLength for empty checks, and tidy up template changes (header version display and series wanted lang). Minor cleanup and safer handling to prevent NPEs and improve consistency.